# barnacle

./: Cargo.toml  README.md  devenv.nix  flake.nix
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  close-issues.yml  coverage.yaml
barnacle-cli/: Cargo.toml
barnacle-cli/src/: game.rs  main.rs  mod_.rs  profile.rs
barnacle-gui/: CONTRIBUTING.md  Cargo.toml  README.md
barnacle-gui/assets/icons/: process
barnacle-gui/locales/ang-GB/: main.ftl
barnacle-gui/locales/en-US/: common.ftl
barnacle-gui/locales/en-US/library_manager/: main.ftl  new_game_dialog.ftl
barnacle-gui/locales/en-US/main/: action_bar.ftl  top_bar.ftl
barnacle-gui/src/: main.rs
barnacle-gui/src/components/: add_mod_dialog.rs  mod.rs  mod_list.rs
barnacle-gui/src/components/library_manager/: mod.rs  new_game_dialog.rs
barnacle-gui/src/components/library_manager/games_sidebar/: edit_dialog.rs  mod.rs  new_dialog.rs
barnacle-gui/src/components/library_manager/games_tab/: edit_dialog.rs  mod.rs  new_dialog.rs
barnacle-gui/src/components/library_manager/profiles_tab/: edit_dialog.rs  mod.rs  new_dialog.rs
barnacle-gui/src/components/mod_list/: mod.rs  state.rs
barnacle-gui/src/config/: mod.rs
barnacle-lib/: CONTRIBUTING.md  Cargo.toml
barnacle-lib/src/: fs.rs
barnacle-lib/src/repository/: config.rs  db.rs  mod.rs
barnacle-lib/src/repository/db/: mod.rs
barnacle-lib/src/repository/db/models/: games.rs  mod.rs  mod_entries.rs  mods.rs  profiles.rs  tools.rs
barnacle-lib/src/repository/db/models/v1/: games.rs  mod_entries.rs  mods.rs  profiles.rs  tools.rs
barnacle-lib/src/repository/entities/: entity_id.rs  game.rs  mod.rs  mod_.rs  mod_entry.rs  profile.rs  tool.rs
barnacle-lib/src/repository/models/v1/: mod_entries.rs  mods.rs  profiles.rs  tools.rs
nix/: package.nix  shell.nix
