[package]
name = "barnacle-cli"
version.workspace = true
edition.workspace = true
homepage.workspace = true

[dependencies]
barnacle-lib = { path = "../barnacle-lib" }
clap = { version = "4.5.56", features = ["derive"] }
cliux = "0.5.1"
colored = "3.1.1"
human-panic = "2.0.6"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[lints]
workspace = true
