[package]
name = "barnacle-gui"
version.workspace = true
edition.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
barnacle-lib = { path = "../barnacle-lib" }
derive_more = { version = "2.1.1", features = ["deref", "deref_mut"] }
human-panic = "2.0.4"
iced = { version = "0.14.0", features = ["tokio", "svg", "advanced"] }
include_dir = "0.7.4"
parking_lot = "0.12.5"
rfd = "0.16.0"
serde = { version = "1.0.228", features = ["derive"] }
strum = "0.27.2"
sweeten = { git = "https://github.com/airstrike/sweeten" }
tokio = { version = "1.48.0", features = ["sync"] }
toml = "0.9.10"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[features]
default = ["debug"]
debug = ["iced/debug", "iced/hot", "iced/time-travel"]
