[package]
name = "barnacle-lib"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
agdb = "0.12.5"
chrono = "0.4.43"
clap = { version = "4.5.54", features = ["derive"] }
compress-tools = "0.15.1"
damascus = { version = "0.0.10", default-features=false, features = ["overlayfs"] }
derive_more = { version = "2.1.1", features = ["eq", "from", "as_ref", "display", "deref"] }
getset = "0.1.6"
heck = "0.5.0"
human-panic = "2.0.4"
parking_lot = "0.12.5"
serde = { version = "1.0.228", features = ["derive"] }
strum = { version = "0.27.2", features = ["derive"] }
tempfile = "3.23.0"
thiserror = "2.0.18"
tokio = { version = "1.49.0" }
toml = "0.9.11"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
walkdir = "2.5.0"
xdg = "3.0.0"
zip = "7.0.0"

[dev-dependencies]
tempfile = "3.23.0"
